--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> This is changes of v2 </h1>
+    <h1> This is new changes for v3 </h1>
 </body>
 </html>
